// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileTabs > snapshot > should match the snapshot across all variants > no space 1`] = `
<div>
  <nav
    aria-label="write"
    class="flex h-14 shrink-0 items-stretch border-t border-rule bg-paper pb-[env(safe-area-inset-bottom)] md:hidden"
    data-testid="mobile-tabs"
  >
    <a
      aria-current="page"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink"
      data-discover="true"
      data-testid="mobile-tabs-write"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        write
      </span>
    </a>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-read"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-open h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7v14"
        />
        <path
          d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        read
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-brain"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-brain h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 18V5"
        />
        <path
          d="M15 13a4.17 4.17 0 0 1-3-4 4.17 4.17 0 0 1-3 4"
        />
        <path
          d="M17.598 6.5A3 3 0 1 0 12 5a3 3 0 1 0-5.598 1.5"
        />
        <path
          d="M17.997 5.125a4 4 0 0 1 2.526 5.77"
        />
        <path
          d="M18 18a4 4 0 0 0 2-7.464"
        />
        <path
          d="M19.967 17.483A4 4 0 1 1 12 18a4 4 0 1 1-7.967-.517"
        />
        <path
          d="M6 18a4 4 0 0 1-2-7.464"
        />
        <path
          d="M6.003 5.125a4 4 0 0 0-2.526 5.77"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        brain
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-split"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-columns2 lucide-columns-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M12 3v18"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        split
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-cite"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-quote h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        cite
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-more"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        more
      </span>
    </button>
  </nav>
</div>
`;

exports[`MobileTabs > snapshot > should match the snapshot across all variants > space only 1`] = `
<div>
  <nav
    aria-label="write"
    class="flex h-14 shrink-0 items-stretch border-t border-rule bg-paper pb-[env(safe-area-inset-bottom)] md:hidden"
    data-testid="mobile-tabs"
  >
    <a
      aria-current="page"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink"
      data-discover="true"
      data-testid="mobile-tabs-write"
      href="/s/s1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        write
      </span>
    </a>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-read"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-open h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7v14"
        />
        <path
          d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        read
      </span>
    </button>
    <a
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-discover="true"
      data-testid="mobile-tabs-brain"
      href="/s/s1/dump"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-brain h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 18V5"
        />
        <path
          d="M15 13a4.17 4.17 0 0 1-3-4 4.17 4.17 0 0 1-3 4"
        />
        <path
          d="M17.598 6.5A3 3 0 1 0 12 5a3 3 0 1 0-5.598 1.5"
        />
        <path
          d="M17.997 5.125a4 4 0 0 1 2.526 5.77"
        />
        <path
          d="M18 18a4 4 0 0 0 2-7.464"
        />
        <path
          d="M19.967 17.483A4 4 0 1 1 12 18a4 4 0 1 1-7.967-.517"
        />
        <path
          d="M6 18a4 4 0 0 1-2-7.464"
        />
        <path
          d="M6.003 5.125a4 4 0 0 0-2.526 5.77"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        brain
      </span>
    </a>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-split"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-columns2 lucide-columns-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M12 3v18"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        split
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-cite"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-quote h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        cite
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-more"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        more
      </span>
    </button>
  </nav>
</div>
`;

exports[`MobileTabs > snapshot > should match the snapshot across all variants > with doc and space 1`] = `
<div>
  <nav
    aria-label="write"
    class="flex h-14 shrink-0 items-stretch border-t border-rule bg-paper pb-[env(safe-area-inset-bottom)] md:hidden"
    data-testid="mobile-tabs"
  >
    <a
      aria-current="page"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink"
      data-discover="true"
      data-testid="mobile-tabs-write"
      href="/s/s1/d/d1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        write
      </span>
    </a>
    <a
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-discover="true"
      data-testid="mobile-tabs-read"
      href="/s/s1/d/d1/read"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-open h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7v14"
        />
        <path
          d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        read
      </span>
    </a>
    <a
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-discover="true"
      data-testid="mobile-tabs-brain"
      href="/s/s1/dump"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-brain h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 18V5"
        />
        <path
          d="M15 13a4.17 4.17 0 0 1-3-4 4.17 4.17 0 0 1-3 4"
        />
        <path
          d="M17.598 6.5A3 3 0 1 0 12 5a3 3 0 1 0-5.598 1.5"
        />
        <path
          d="M17.997 5.125a4 4 0 0 1 2.526 5.77"
        />
        <path
          d="M18 18a4 4 0 0 0 2-7.464"
        />
        <path
          d="M19.967 17.483A4 4 0 1 1 12 18a4 4 0 1 1-7.967-.517"
        />
        <path
          d="M6 18a4 4 0 0 1-2-7.464"
        />
        <path
          d="M6.003 5.125a4 4 0 0 0-2.526 5.77"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        brain
      </span>
    </a>
    <a
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-discover="true"
      data-testid="mobile-tabs-split"
      href="/s/s1/d/d1/split"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-columns2 lucide-columns-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M12 3v18"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        split
      </span>
    </a>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-cite"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-quote h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        cite
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex flex-1 flex-col items-center justify-center gap-0.5 px-1 transition-colors text-ink-3 hover:text-ink"
      data-testid="mobile-tabs-more"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
      <span
        class="font-mono text-[9px] uppercase tracking-wider"
      >
        more
      </span>
    </button>
  </nav>
</div>
`;
